--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "^2.0",
+        "santigarcor/laratrust": "^7.1",
         "vonage/client": "^3.0"
     },
     "require-dev": {
